samples/_failures_safe/1761313509_95cf95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61a931a9.c: In function ‘main’:
./samples/SAFE/__tmp_61a931a9.c:157:13: error: expected ‘:’ or ‘...’ at end of input
  157 |             case 1
      |             ^~~~
./samples/SAFE/__tmp_61a931a9.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61a931a9.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61a931a9.c:157:13: error: expected declaration or statement at end of input
